ass framework, list type of ci's

--- a/src/index.html
+++ b/src/index.html
@@ -26,26 +26,58 @@
 				<section class="title" data-background-color="rgb(13,106,159)" data-markdown="slides/0_title.md"></section>
                 <section data-markdown="slides/0_toc.md"></section>
                     <section data-markdown="slides/01_code.md">
-                        <section data-markdown="slides/011_code_guidelines.md"></section>
-                        <section data-markdown="slides/012_code_structures.md"></section>
-                        <section data-markdown="slides/013_code_fixtures.md"></section>
-                        <section data-markdown="slides/014_code_examples.md"></section>
+                        <section data-markdown="slides/031_viewers.md"></section>
+                        <section data-markdown="slides/032_editors.md"></section>
+                        <section data-markdown="slides/033_differs.md"></section>
+                        <section data-markdown="slides/034_examples.md"></section>
                     </section>
                     <section data-markdown="slides/02_data.md">
+                        <section data-markdown="slides/031_viewers.md"></section>
+                        <section data-markdown="slides/032_editors.md"></section>
+                        <section data-markdown="slides/033_differs.md"></section>
+                        <section data-markdown="slides/034_examples.md"></section>
                     </section>
                     <section data-markdown="slides/03_documents.md">
+                        <section data-markdown="slides/031_viewers.md"></section>
+                        <section data-markdown="slides/032_editors.md"></section>
+                        <section data-markdown="slides/033_differs.md"></section>
+                        <section data-markdown="slides/034_examples.md"></section>
                     </section>
                     <section data-markdown="slides/04_slides.md">
+                        <section data-markdown="slides/041_viewers.md"></section>
+                        <section data-markdown="slides/042_editors.md"></section>
+                        <section data-markdown="slides/043_differs.md"></section>
+                        <section data-markdown="slides/044_examples.md"></section>
                     </section>
                     <section data-markdown="slides/05_reports.md">
+                        <section data-markdown="slides/051_viewers.md"></section>
+                        <section data-markdown="slides/052_editors.md"></section>
+                        <section data-markdown="slides/053_differs.md"></section>
+                        <section data-markdown="slides/054_examples.md"></section>
                     </section>
                     <section data-markdown="slides/06_tests.md">
+                        <section data-markdown="slides/061_viewers.md"></section>
+                        <section data-markdown="slides/062_editors.md"></section>
+                        <section data-markdown="slides/063_differs.md"></section>
+                        <section data-markdown="slides/064_examples.md"></section>
                     </section>
                     <section data-markdown="slides/07_artifacts.md">
+                        <section data-markdown="slides/071_viewers.md"></section>
+                        <section data-markdown="slides/072_editors.md"></section>
+                        <section data-markdown="slides/073_differs.md"></section>
+                        <section data-markdown="slides/074_examples.md"></section>
                     </section>
-                    <section data-markdown="slides/08_landing_page.md">
+                    <section data-markdown="slides/08_website.md">
+                        <section data-markdown="slides/081_viewers.md"></section>
+                        <section data-markdown="slides/082_editors.md"></section>
+                        <section data-markdown="slides/083_differs.md"></section>
+                        <section data-markdown="slides/084_examples.md"></section>
                     </section>
                     <section data-markdown="slides/09_tickets.md">
+                        <section data-markdown="slides/091_viewers.md"></section>
+                        <section data-markdown="slides/092_editors.md"></section>
+                        <section data-markdown="slides/093_differs.md"></section>
+                        <section data-markdown="slides/094_examples.md"></section>
                     </section>
                 
             <section class="title" data-background-color="rgb(13,106,159)" data-markdown="slides/thanks.md"></section>
