allow in depth level

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,9 @@
         <div class="reveal">
             <div class="slides">
 				<section class="title" data-background-color="rgb(13,106,159)" data-markdown="slides/0_title.md"></section>
-                <section data-markdown="slides/0_toc.md"></section>
-                    <section data-markdown="slides/01_code.md">
+				<section data-markdown="slides/0_toc.md"></section>
+                    <section>
+						<section data-markdown="slides/01_code.md"></section>
                         <section data-markdown="slides/031_viewers.md"></section>
                         <section data-markdown="slides/032_editors.md"></section>
                         <section data-markdown="slides/033_differs.md"></section>
