--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,74 @@
         <div class="reveal">
             <div class="slides">
 				<section class="title" data-background-color="rgb(13,106,159)" data-markdown="0_title.md"></section>
-				<section data-markdown="0_toc.md"></section>
+                <section>
+                    <section data-markdown="idea/rational.md"></section>
+                    <section>
+                        <h2>Diagram for code</h2>
+                        <pre>
+                              <code class="language-plantuml">
+                                @startuml
+                                  database git
+                                  database test_reports
+                                  database artifact_repository
+                                (code)->(build)
+                                (build)->(check)
+                                (check)->(verify)
+                                (verify)->(publish)
+                                (publish)->(deploy)
+                                (deploy)->(validate)
+                                (validate)->(end result)
+
+                                git -down->code : stores
+                                test_reports -down-->verify
+                                artifact_repository-down->publish
+                                Developer -up-> (code) : write
+                                compiler --up-> (build): compiles
+                                linter --up-> (check): check all kinds of things
+                                unittest ---up-> (verify): verifies small parts
+                                :package manager: --up-> (publish): wrap content in a know format
+                                :known scripts: -up-> (deploy): deploy it on a known location
+                                :system test: --up-> (validate): validate
+                                :end user: -up-> (end result):interact with
+                                  @enduml
+                              </code>
+                            </pre>
+                    </section>
+                    <section>
+                        <h2>Everything fits in this model</h2>
+                        <pre>
+                              <code class="language-plantuml">
+                                @startuml
+                                  database git
+                                  database git2
+                                  database git3
+                                (everything)->(build)
+                                (build)->(check)
+                                (check)->(verify)
+                                (verify)->(publish)
+                                (publish)->(deploy)
+                                (deploy)->(validate)
+                                (validate)->(end result)
+
+                                git -down->everything : stores
+                                git2 -down-->verify
+                                git3-down->publish
+
+                                people -up-> (everything) : write as code
+                                program1 --up-> (build): transforms
+                                program2 --up-> (check): syntax and semantics
+                                program3 ---up-> (verify): verifies the user and environment input
+                                program4 --up-> (publish): wrap content
+                                program5 -up-> (deploy): webpage or on traget
+                                program6 --up-> (validate): validate behavior
+                                :end user: -up-> (end result):interact with
+                                  @enduml
+                              </code>
+                            </pre>
+                    </section>
+                    <section data-markdown="idea/0_toc.md"></section>
+                </section>
+
                 <section>
                     <section data-markdown="code/01_code.md"></section>
                     <section data-markdown="code/rational.md"></section>
@@ -55,7 +122,7 @@
                     <section data-markdown="slides/viewers.md"></section>
                     <section data-markdown="slides/editors.md"></section>
                     <section data-markdown="slides/differs.md"></section>
-                    <section data-markdown="slides/examples.md"></section>
+                    <section data-markdown="slides/examples.md" class="language-plantuml"></section>
                 </section>
                 <section>
                     <section data-markdown="reports/05_reports.md"></section>
@@ -119,6 +186,7 @@
                     { src: 'lib/plugin/markdown/marked.js' },
                     { src: 'lib/plugin/markdown/markdown.js' },
                     { src: 'lib/plugin/notes/notes.js', async: true },
+                    { src: '//cdn.jsdelivr.net/npm/reveal-plantuml' },
                     { src: 'lib/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
                 ]
             });
